--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "license" : "proprietary",
     "require" : {
         "aws/aws-sdk-php" : "^3.48",
-        "bkwatch/wampsyncclient" : "^2.0.0",
+        "bkwatch/wampsyncclient" : "^2.0",
         "drupol/phpermutations" : "^1.3",
         "guzzlehttp/guzzle" : "~6.0",
         "guzzlehttp/psr7" : "^1.4",
@@ -18,6 +18,7 @@
         "symfony/browser-kit" : "~2.1|~3.0|~4.0",
         "symfony/css-selector" : "~2.1|~3.0|~4.0",
         "symfony/dom-crawler" : "~2.1|~3.0|~4.0",
+        "symfony/lock" : "^5.2",
         "zbateson/mail-mime-parser" : "^1.1",
         "php-di/php-di" : "^6.3",
         "psr/container" : "^1.0",
